--- a/index.html
+++ b/index.html
@@ -7,19 +7,102 @@
   </head>
   <body>
     <header>
-      <a href="">
-        <img src="./images/Logo.svg" alt="WebStudio" />
-      </a>
-
-      <a href="">Studio</a>
-      <a href="">Portfolio</a>
-      <a href="">Contacts</a>
+      <a href="">WEB</a> <a href="">Studio</a>
+      <nav>
+        <a href="">Studio</a>
+        <a href="">Portfolio</a>
+        <a href="">Contacts</a>
+      </nav>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
       </address>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+        <h2>What are we doing</h2>
+        <img src="./images/img 1.jpg" alt="work on computer" width="360" />
+        <img src="./images/img 2.jpg" alt="chat on the phone" width="360" />
+        <img src="./images/img 3.jpg" alt="other phone work" width="360" />
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/Mark Guerrero.jpg"
+              alt="foto Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./images/Tom Ford.jpg" alt="foto Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/Camila Garcia.jpg"
+              alt="foto Camila Garcia"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Daniel Wilson.jpg"
+              alt="foto Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="">WEB</a> <a href="">Studio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
