--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </nav>
       <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <a href="tel:+11(000)1111111"> +11 (000) 111-11-11</a>
       </address>
     </header>
     <main>
@@ -55,31 +55,31 @@
           </li>
         </ul>
         <h2>What are we doing</h2>
-        <img src="./images/img 1.jpg" alt="work on computer" width="360" />
-        <img src="./images/img 2.jpg" alt="chat on the phone" width="360" />
-        <img src="./images/img 3.jpg" alt="other phone work" width="360" />
+        <img src="./images/img1.jpg" alt="work_on_computer" width="360" />
+        <img src="./images/img2.jpg" alt="chat_on_the_phone" width="360" />
+        <img src="./images/img3.jpg" alt="other_phone_work" width="360" />
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
             <img
-              src="./images/Mark Guerrero.jpg"
-              alt="foto Mark Guerrero"
+              src="./images/mark_guerrero.jpg"
+              alt="foto_Mark_Guerrero"
               width="264"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/Tom Ford.jpg" alt="foto Tom Ford" width="264" />
+            <img src="./images/tom_ford.jpg" alt="foto_Tom_Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/Camila Garcia.jpg"
-              alt="foto Camila Garcia"
+              src="./images/Camila_Garcia.jpg"
+              alt="foto_camila_garcia"
               width="264"
             />
             <h3>Camila Garcia</h3>
@@ -87,8 +87,8 @@
           </li>
           <li>
             <img
-              src="./images/Daniel Wilson.jpg"
-              alt="foto Daniel Wilson"
+              src="./images/daniel_wilson.jpg"
+              alt="foto_Daniel_Wilson"
               width="264"
             />
             <h3>Daniel Wilson</h3>
