--- a/index.html
+++ b/index.html
@@ -7,22 +7,36 @@
   </head>
   <body>
     <header>
-      <a href="">WEB</a> <a href="">Studio</a>
+      <a href="./index.html">WEBStudio</a>
       <nav>
-        <a href="">Studio</a>
-        <a href="">Portfolio</a>
-        <a href="">Contacts</a>
+        <ul>
+          <li>
+            <a href="">Studio</a>
+          </li>
+          <li>
+            <a href="">Portfolio</a>
+          </li>
+          <li>
+            <a href="">Contacts</a>
+          </li>
+        </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11(000)1111111"> +11 (000) 111-11-11</a>
+        <li>
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+        </li>
       </address>
     </header>
     <main>
+      <!--section1-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
+      <!--section2-->
       <section>
         <ul>
           <li>
@@ -54,43 +68,35 @@
             </p>
           </li>
         </ul>
+      </section>
+      <!--section3-->
+      <section>
         <h2>What are we doing</h2>
         <img src="./images/img1.jpg" alt="work_on_computer" width="360" />
         <img src="./images/img2.jpg" alt="chat_on_the_phone" width="360" />
         <img src="./images/img3.jpg" alt="other_phone_work" width="360" />
       </section>
+      <!--section4-->
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/mark_guerrero.jpg"
-              alt="foto_Mark_Guerrero"
-              width="264"
-            />
+            <img src="./images/img4.jpg" alt="foto_Mark_Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tom_ford.jpg" alt="foto_Tom_Ford" width="264" />
+            <img src="./images/img5.jpg" alt="foto_Tom_Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./images/Camila_Garcia.jpg"
-              alt="foto_camila_garcia"
-              width="264"
-            />
+            <img src="./images/img6.jpg" alt="foto_camila_garcia" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/daniel_wilson.jpg"
-              alt="foto_Daniel_Wilson"
-              width="264"
-            />
+            <img src="./images/img7.jpg" alt="foto_Daniel_Wilson" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -98,7 +104,7 @@
       </section>
     </main>
     <footer>
-      <a href="">WEB</a> <a href="">Studio</a>
+      <a href="./index.html">WEBStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
