--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">WEBStudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li>
@@ -27,7 +27,7 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111"> +11 (000) 111-11-11</a>
+            <a href="tel:+110001111111">+11(000)111-11-11</a>
           </li>
         </ul>
       </address>
@@ -40,6 +40,7 @@
       </section>
       <!--section2-->
       <section>
+        <h2>Qualities of an employee</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -106,7 +107,7 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WEBStudio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
